# datacod

./: README.md
source/: AUTHORS  Makefile  Makefile.in  README  config.h  config.status  configure  configure.in  datacod.glade
source/pixmaps/: att_2.xpm  datacod.xpm  datacod2.xpm  info_2.xpm  interdit_2.xpm
source/pixmaps/.xvpics/: datacod2.xpm
source/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  donnees.h  interface.c  interface.c.bak  interface.h.bak  main.c  support.c  support.h
source/src/.deps/: callbacks.P  interface.P  main.P  support.P
